# mipscript

./: .gitignore  CMakeLists.txt  IntegerParsingTest  Makefile  README.md  WhitespaceParsingTest  WhitespaceParsingTest[1]_include.cmake  WhitespaceParsingTest[1]_tests.cmake
.github/workflows/: build_test.yml
app/: Makefile  index.html  mipscript.js  mipscript.wasm  package.json  styles.css
examples/: int.mipscript  test.mipscript
src/: main.cpp  wasm.cpp
src/compiler/: compiler.cpp  compiler.hpp
src/evaluator/: evaluator.cpp  evaluator.hpp
src/parser/: parser.cpp  parser.hpp  syntaxNode.cpp  syntaxTree.cpp  syntaxTree.hpp
tests/: test_addition.cpp  test_comments.cpp  test_integers.cpp  test_whitespace.cpp
tests/comments/: comments.mipscript
tests/parsing/: test_integers.cpp  test_whitespace.cpp
